# pdf-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-docling.txt  requirements-mineru.txt  requirements.txt
.claude/: settings.local.json
.streamlit/: config.toml
app/: __init__.py  streamlit_app.py  ui_eval.py  ui_parse_preview.py  ui_quality.py  ui_session.py  ui_session_eval.py  ui_shortcuts.py  ui_theme.py
app/api/: __init__.py  main.py  schemas.py
config/: magic-pdf.json
deploy/langfuse/: .env.example  README.md  docker-compose.yml
deploy/mongo/: docker-compose.yml
docs/: README.md
docs/agent/: agent-and-refusal-spec.md
docs/demo/: README.md  (+1 more)
scripts/: check_env.sh  check_secrets.sh  demo_questions.json  download_mineru_models.sh  evaluate.py  export_eval_proof.py  fix_mineru_env.sh  ingest.py  install_docling.sh  langfuse_session_report.py  mineru_ocr_weights.py  run_api.sh  run_mineru_poc.py  run_streamlit.sh  setup.sh  setup_env.sh  start_langfuse.sh  start_mongo.sh  start_services.sh
src/: __init__.py
tests/: conftest.py  rejectAnswerExample.txt  test_ark_json.py  test_eval_helpers.py  test_faiss_store.py  test_ingest_force_full.py  test_ingest_progress.py  test_langfuse_io.py  test_langfuse_trace_id.py  test_parser_factory.py  test_query_signals.py  test_question_generator_parse.py  test_refusal_routing.py  test_retrieval_technical_overview.py  test_retriever_guards.py  test_session_eval.py  test_streamlit_qa_chat.py  test_table_postprocess.py  test_ui_eval.py  test_ui_quality.py  test_ui_session_chat.py
(+68 files in other folders)
